--- a/_config.yml
+++ b/_config.yml
@@ -37,24 +37,19 @@ markdown: redcarpet2
 redcarpet:
   extensions:
     - autolink
-    - hard_wrap
     - no_intra_emphasis
     - fenced_code_blocks
     - tables
     - with_toc_data
     - strikethrough
     - superscript
-# rdiscount:
-#   extensions:
-#     - autolink
-#     - footnotes
-#     - smart
+    - disable_indented_code_blocks
 pygments: false # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "Читать дальше &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
 
