--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://smaximov.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
+title: Без названия
+subtitle: Блог о языках программирования, технологиях и прочих (не)интересных вещах
 author: Сергей Максимов
 simple_search: http://google.com/search
 description:
