--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://smaximov.github.io
+url: http://blog.smaximov.info
 title: Без названия
 subtitle: Блог о языках программирования, технологиях и прочих (не)интересных вещах
 author: Сергей Максимов
@@ -85,7 +85,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: smaximov
 disqus_show_comment_count: false
 
 # Google Analytics
